# Pipeline-CI-CPP

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: CI-docker.yml  CMake_on_Linux.yml  CMake_on_Windows.yml  Docker.yml  cmake-multi-platform.yml  cmake-single-platform.yml  docker-image.yml
include/: Ascii.h  BigFonts.h  fonts.h
src/: main.cpp
utility/: timer.hpp
